# nickel-kubernetes

./: .gitignore  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: main.yml
argo-workflows/: .gitkeep
examples/: redis-replication-controller.ncl  test.ncl
gen-k8s-nickel/: Cargo.toml  result.ncl  utils.ncl
gen-k8s-nickel/src/: as_ncl.rs  defs_overrides.rs  deps.rs  k8s.rs  lib.rs  main.rs
gen-k8s-nickel/tests/: as_ncl.rs  format.rs
generator/: Cargo.toml
generator/src/: main.rs
json-schema-bundler/: README.md  node-packages.nix  package-lock.json  package.json
k8s-nickel/: .gitkeep
kubernetes-contracts/v1.29.3/: _definitions.ncl  affinity-v1.ncl  affinity.ncl  aggregationrule.ncl  all.ncl  allocationresult-resource-v1alpha2.ncl  allocationresult.ncl  apigroup-meta-v1.ncl  apigroup.ncl  apigrouplist-meta-v1.ncl  apigrouplist.ncl  apiresource.ncl  apiresourcelist-meta-v1.ncl  apiresourcelist.ncl  apiservice-apiregistration-v1.ncl  apiservice.ncl  apiservicecondition-apiregistration-v1.ncl  apiservicelist-apiregistration-v1.ncl  apiservicelist.ncl  apiservicespec.ncl  apiservicestatus.ncl  apiversions-meta-v1.ncl  apiversions.ncl  attachedvolume.ncl  auditannotation-admissionregistration-v1alpha1.ncl  auditannotation.ncl  awselasticblockstorevolumesource.ncl  azurediskvolumesource-v1.ncl  azurefilepersistentvolumesource-v1.ncl  (+833 more)
openapi2-to-nickel/: Cargo.toml
openapi2-to-nickel/src/: as_ncl.rs  format.rs  k8s.rs  main.rs
openapi2-to-nickel/tests/: as_ncl.rs  format.rs
scripts/: build.sh  nixfmt.sh  regenerate-defs.sh  rustfmt.sh
(+3737 files in other folders)
