[package]
name = "tweag-gen-k8s-nickel"
version = "0.1.0"
authors = ["agondek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
openapi = "0.1.5"
clap = { version = "2.27.1", default-features = false, features = [] }

[dev-dependencies]
rstest = "0.10.0"

