[package]
name = "openapi2-to-nickel"
version = "0.1.0"
authors = ["agondek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.27.1", default-features = false, features = [] }
itertools = "0.10.0"
lazy_static = { version = "1.4.0", features = [] }
openapi = { git = "https://github.com/softprops/openapi.git", branch = "master" }

[dev-dependencies]
rstest = "0.10.0"

